# HaskellImages

./: .gitignore  CHANGELOG.md  HaskellImages.cabal  HaskellImages.code-workspace  LICENSE  README.md  stack.yaml
.trash/: Sigma_trash.hs  TestHip.hs  Zeta.hs
R/: Bessel.R  BesselData.hs  BesselDataX.hs  BesselDataY.hs
essais/: EssaiAngerJ.hs  EssaiAngerWeber.hs  EssaiBesselJ.hs  EssaiRogersRamanujan.hs  EssaiWeberE.hs  EssaiWeierSobel.hs  EssaiWeierSobel2.hs
images/: zeta15.tiff
src/: BesselCSV.hs  Cayley.hs  ColorFun.hs  ColorMap.hs  ColorMaps.hs  Eisenstein.hs  Eisenstein2.hs  Exception.hs  Gradient.hs  Klein.hs  KleinFibonacci.hs  Palette.hs  SaveImage.hs  Sigma.hs  WriteRGB.hs  Zeta.hs
