name:                HaskellImages
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/HaskellImages#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2023 Stéphane Laurent
category:            Images
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ColorMap
                     , Gradient
                     , Zeta
                     , Sigma
                     , Exception
                     , Eisenstein
                     , Palette
                     , Klein
                     , KleinFibonacci
  build-depends:       base >= 4.7 && < 5
                     , hip
                     , weierstrass-functions >= 0.1.3.0
                     , numeric-tools
                     , vector
                     , extra
                     , colour
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/stla/HaskellImages
